--- a/.cproject
+++ b/.cproject
@@ -24,20 +24,22 @@
 <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1403380374" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug">
 <option id="gnu.cpp.compiler.exe.debug.option.optimization.level.1134171259" name="Optimization Level" superClass="gnu.cpp.compiler.exe.debug.option.optimization.level" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 <option id="gnu.cpp.compiler.exe.debug.option.debugging.level.1570816090" name="Debug Level" superClass="gnu.cpp.compiler.exe.debug.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
-<option id="gnu.cpp.compiler.option.include.paths.973708985" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+<option id="gnu.cpp.compiler.option.include.paths.973708985" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/lib/h}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/libc/include}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/libcpp/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/user/libs}&quot;"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.676891083" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 </tool>
 <tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.404261252" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
 <option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.exe.debug.option.optimization.level.2046833214" name="Optimization Level" superClass="gnu.c.compiler.exe.debug.option.optimization.level" valueType="enumerated"/>
 <option id="gnu.c.compiler.exe.debug.option.debugging.level.382782525" name="Debug Level" superClass="gnu.c.compiler.exe.debug.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
-<option id="gnu.c.compiler.option.include.paths.613979668" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+<option id="gnu.c.compiler.option.include.paths.613979668" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/lib/h}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/libc/include}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/kernel/h}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Escape/user/libs}&quot;"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.2066943898" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 </tool>
