--- a/user/c/libctest/Makefile
+++ b/user/c/libctest/Makefile
@@ -25,26 +25,26 @@ CCMDOBJ=$(patsubst tests/%.c,$(BUILD)/user_$(NAME)_tests_%.o,$(CCMDSRC))
 all:	$(BIN)
 
 $(BIN):	$(LDCONF) $(COBJ) $(CCMDOBJ) $(START) $(LIBCA)
-		@echo "===== LINKING =====";
-		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(CCMDOBJ) $(LIBCA);
-		@echo "===== COPYING ON DISK =====";
+		@echo "	" LINKING $(BIN)
+		@$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(CCMDOBJ) $(LIBCA);
+		@echo "	" COPYING ON DISK
 		@make -C $(ROOT) mounthdd
-		$(SUDO) cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
+		@$(SUDO) cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
 		@make -C $(ROOT) umounthdd
 
 $(BUILD)/user_$(NAME)_%.o:		%.c
-		@echo "===== COMPILING $< =====";
-		$(CC) $(CFLAGS) -o $@ -c $<
+		@echo "	" CC $<
+		@$(CC) $(CFLAGS) -o $@ -c $<
 
 $(BUILD)/user_$(NAME)_tests_%.o:		tests/%.c
-		@echo "===== COMPILING $< =====";
-		$(CC) $(CFLAGS) -o $@ -c $<
+		@echo "	" CC $<
+		@$(CC) $(CFLAGS) -o $@ -c $<
 
 $(DEP):	$(CSRC) $(CCMDSRC)
-		@echo "===== GENERATING DEPENDENCIES =====";
-		$(CC) $(CFLAGS) -MM $(CSRC) $(CCMDSRC) > $(DEP);
+		@echo "	" GENERATING DEPENDENCIES
+		@$(CC) $(CFLAGS) -MM $(CSRC) $(CCMDSRC) > $(DEP);
 		@# prefix all files with the build-path (otherwise make wouldn't find them)
-		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/user_$(NAME)_)\1.o:/g" $(DEP);
+		@sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/user_$(NAME)_)\1.o:/g" $(DEP);
 		@for i in $(patsubst tests/%.c,%,$(wildcard tests/*.c)) ; do \
 			sed --in-place -e "s/$(subst /,\/,$(BUILD)/user_$(NAME)_)$$i.o:/$(subst /,\/,$(BUILD)/user_$(NAME)_tests_)$$i.o:/g" $(DEP); \
 		done;
