--- a/bochs.cfg
+++ b/bochs.cfg
@@ -36,9 +36,9 @@ clock: sync=none, time0=local
 ne2k: enabled=0
 pnic: enabled=0
 # no loader
-log: log.txt
+log: bochs.txt
 logprefix: %t%e%d
-debugger_log: debug.txt
+#debugger_log: debug.txt
 panic: action=fatal
 error: action=report
 info: action=report
