--- a/services/fs/Makefile
+++ b/services/fs/Makefile
@@ -25,9 +25,7 @@ $(BIN):	$(LDCONF) $(COBJ) $(CEXT2OBJ) $(START) $(LIBCA)
 		@echo "	" LINKING $(BIN)
 		@$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(CEXT2OBJ) $(LIBCA);
 		@echo "	" COPYING ON DISK
-		@make -C ../../ mounthdd
-		@$(SUDO) cp $(BIN) $(DISKMOUNT)/sbin/$(NAME)
-		@make -C ../../ umounthdd
+		../../tools/cp2disk.sh $(BIN) /sbin/$(NAME)
 
 $(BUILD)/service_$(NAME)_%.o:		%.c
 		@echo "	" CC $<
