--- a/user/c/x86mark/Makefile
+++ b/user/c/x86mark/Makefile
@@ -27,9 +27,7 @@ $(BIN):	$(LDCONF) $(COBJ) $(ASM) $(START) $(LIBCA)
 		@echo "	" LINKING $(BIN)
 		@$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(ASM) $(LIBCA);
 		@echo "	" COPYING ON DISK
-		@make -C $(ROOT) mounthdd
-		@$(SUDO) cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
-		@make -C $(ROOT) umounthdd
+		$(ROOT)/tools/cp2disk.sh $(BIN) /bin/$(NAME)
 
 $(BUILD)/user_$(NAME)_%.o:		%.c
 		@echo "	" CC $<
