--- a/user/c/libctest/Makefile
+++ b/user/c/libctest/Makefile
@@ -28,9 +28,7 @@ $(BIN):	$(LDCONF) $(COBJ) $(CCMDOBJ) $(START) $(LIBCA)
 		@echo "	" LINKING $(BIN)
 		@$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(CCMDOBJ) $(LIBCA);
 		@echo "	" COPYING ON DISK
-		@make -C $(ROOT) mounthdd
-		@$(SUDO) cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
-		@make -C $(ROOT) umounthdd
+		$(ROOT)/tools/cp2disk.sh $(BIN) /bin/$(NAME)
 
 $(BUILD)/user_$(NAME)_%.o:		%.c
 		@echo "	" CC $<
