--- a/bochs.cfg
+++ b/bochs.cfg
@@ -15,6 +15,7 @@ ata0-master: type=disk, path=build/hd.img, mode=flat, cylinders=40, heads=16, sp
 ata1: enabled=0#1, ioaddr1=0x170, ioaddr2=0x370, irq=15
 ata2: enabled=0
 ata3: enabled=0
+port_e9_hack: enabled=1
 parport1: enabled=0#1, file=""
 parport2: enabled=0
 com1: enabled=0#1, mode=null, dev=""
