--- a/user/c/shell/Makefile
+++ b/user/c/shell/Makefile
@@ -1,46 +1,5 @@
-NAME=shell
-ROOT=../../..
-BUILD=$(ROOT)/build
-DISK=$(BUILD)/disk.img
-DISKMOUNT=$(ROOT)/disk
-BIN=$(BUILD)/user_$(NAME).bin
-DEP=$(BUILD)/user_$(NAME).dep
-LIB=$(ROOT)/lib
-LIBC=$(ROOT)/libc
-LIBS=$(ROOT)/user/libs
-LDCONF=$(LIBC)/ld.conf
+NAME = shell
+ADDLIBS = ../../../build/user_libs_shell.a
+ADDFLAGS = -I../../libs
 
-CC = gcc
-CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/include -I$(LIB)/h \
-	-I$(LIBS) -Wl,-T,$(LDCONF) $(CDEFFLAGS) 
-CSRC=$(wildcard *.c)
-
-LIBCA=$(BUILD)/libc.a
-START=$(BUILD)/libc_startup.o
-LIBSHELLA=$(BUILD)/user_libs_shell.a
-COBJ=$(patsubst %.c,$(BUILD)/user_$(NAME)_%.o,$(CSRC))
-
-.PHONY: all clean
-
-all:	$(BIN)
-
-$(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCA) $(LIBSHELLA)
-		@echo "	" LINKING $(BIN)
-		@$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(LIBCA) $(LIBSHELLA);
-		@echo "	" COPYING ON DISK
-		$(ROOT)/tools/cp2disk.sh $(BIN) /bin/$(NAME)
-
-$(BUILD)/user_$(NAME)_%.o:		%.c
-		@echo "	" CC $<
-		@$(CC) $(CFLAGS) -o $@ -c $<
-
-$(DEP):	$(CSRC)
-		@echo "	" GENERATING DEPENDENCIES
-		@$(CC) $(CFLAGS) -MM $(CSRC) > $(DEP);
-		@# prefix all files with the build-path (otherwise make wouldn't find them)
-		@sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/user_$(NAME)_)\1.o:/g" $(DEP);
-
--include $(DEP)
-
-clean:
-		rm -f $(BIN) $(COBJ) $(DEP)
+-include ../DefMakefile.mk
